--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		</nav>
 		<div id="Dash" class="container row">
 			<div class="col-2 text-center navdash">
-				<i id="btn1" onclick="boton1()" class="fa-regular fa-hospital col-12 my-5 btn btn-primary"></i>
-				<i id="btn2" onclick="boton2()" class="fa-regular fa-hospital col-12 my-5 btn btn-success"></i>
-				<i id="btn3" onclick="boton3()" class="fa-regular fa-hospital col-12 my-5 btn btn-outline-danger"></i>
-				<i class="fa-solid fa-euro-sign col-12 my-5 btn-outline-danger btn-propio"></i> 
+				<i id="btn1" onclick="boton1()" class="fa-solid fa-euro-sign col-12 my-5 btn btn-primary"></i>
+				<i id="btn2" onclick="boton2()" class="fa-solid fa-euro-sign col-12 my-5 btn btn-success"></i>
+				<i id="btn3" onclick="boton3()" class="fa-solid fa-euro-sign col-12 my-5 btn-danger btn"></i>
+				 
 			</div>
 			<div id="caja" class="col-10 navdash d-flex justify-content-center align-items-center">
 				
