--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="container-fluid nop-nom">
 	<div class="container-fluid row nop-nom h-100">
 		<nav class="col-12 row navbar  container-fluid">
-			<img class="col-1 mr-auto ml-2 margin 2 " src="assets/img/logo.png" width="110%" height="110%" alt="">
+			<img class="col-1 mr-auto ml-2 margin 2 " src="assets/img/euro.jfif" width="110%" height="110%" alt="">
 			<div>
 				<i id="btnLlamador" onclick="limpiarCanva()" class="fa-regular fa-circle-dot btn btn-primary"></i>
 			</div>
