--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <script src="js/jquery-latest.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.js" type="text/javascript"></script>
-<script src="js/estilos.js" type="text/javascript"></script>
+<script src="js/estilos.js" type="module"></script>
 
 
 
