--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 				Euromonedas y Crypto
 			</h2>
 			<div>
-				<i id="btnLlamador" onclick="limpiarCanva()" class="fa-regular fa-circle-dot btn btn-primary"></i>
+		       <i id="btnLlamador" onclick="limpiarCanva()" class="fa-regular fa-circle-dot btn btn-primary"></i>
+		
 			</div>
 		</nav>
 		<div id="Dash" class="w-100 row"> 
@@ -34,7 +35,8 @@
 			</div> <div class="col-4 navdash d-flex justify-content-center align-items-start" >
 					
 				<div class="row">
-                    <h3 class="col-12 text-center">Euromonedasycrypto</h3>
+                    <h3 class="col-12 text-center" style="background-color: #3498db; color: #ffffff; padding: 10px;">Mas monedas de Bitcoin y su Valor</h3>
+                    
                     <ul class="col-12 text-center" style="list-style-position: inside;">
                         <li>snx: 0.24826036</li>
                         <li>shping: 153.40238365</li>
